# ferox

./: .gitignore  Cargo.toml  README.md
src/: application.rs  input.rs  lib.rs  main.rs  state.rs  window.rs
src/inputs/: actions.rs  event_handler.rs  mod.rs
web/: index.html
